css/_rotating-text.scss
.rotating-text {
  //font-family: Lato, sans-serif;
  //font-weight: 600;
  //font-size: 36px;
  //color: white;
  //transform: translateX(-80px);

  .rotating {
    display: inline-flex;
    margin: 0;
    vertical-align: top;

    .word {
      position: absolute;
      display: flex;
      opacity: 0;

      .letter {
        transform-origin: center center 25px;

        &.out {
          transform: rotateX(90deg);
          transition: 0.32s cubic-bezier(0.6, 0, 0.7, 0.2);
        }
        &.in {
          transition: 0.38s ease;
        }
        &.behind {
          transform: rotateX(-90deg);
        }
      }
    }
  }
}

// palette: https://flatuicolors.com/palette/defo
.alizarin {
  color: #e74c3c;
}

.wisteria {
  color: #8e44ad;
}

.peter-river {
  color: #3498db;
}

.emerald {
  color: #2ecc71;
}


.green-sea {
  color: #16a085;
}

.sun-flower {
  color: #f1c40f;
}


/* .section-title #whoAmI { */

/*  !* color: #929292; *! */

/*  !* color: #71b997; *! */

/*  color: #64a184; */

/* } */

.rotating-words {
  text-align: start;

  .rotating + span {
    display: flex;
    margin-top: 1.1rem;
  }
}

